--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,39 @@
-aiofiles==0.4.0
+aiofiles==0.7.0
 aniso8601==7.0.0
-apispec==3.3.0
+apispec==5.0.0b1
 apistar==0.7.2
-certifi==2019.11.28
-chardet==3.0.4
-click==7.1.1
+certifi==2021.5.30
+chardet==4.0.0
+charset-normalizer==2.0.3
+click==7.1.2
 docopt==0.6.2
-graphene==2.1.8
-graphql-core==2.3.1
+graphene==2.1.9
+graphql-core==2.3.2
 graphql-relay==2.0.1
 graphql-server-core==2.0.0
-gunicorn==20.0.4
-h11==0.9.0
-httptools==0.0.13
-idna==2.9
-itsdangerous==1.1.0
-jinja2==2.11.1
-markupsafe==1.1.1
-marshmallow==3.5.1
+h11==0.12.0
+httptools==0.1.2
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+marshmallow==3.13.0
 promise==2.3
+python-dotenv==0.18.0
 python-multipart==0.0.5
-pyyaml==5.3.1
+PyYAML==5.4.1
+requests==2.26.0
 requests-toolbelt==0.9.1
-requests==2.23.0
-responder==2.0.5
-rfc3986==1.3.2
-rx==1.6.1
-six==1.14.0
-starlette==0.12.13
+responder==2.0.7
+rfc3986==1.5.0
+Rx==1.6.1
+six==1.16.0
+starlette==0.13.8
 typesystem==0.2.4
-urllib3==1.25.8
-uvicorn==0.10.*
-uvloop==0.14.0
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+uvicorn==0.13.2
+uvloop==0.15.3
+watchgod==0.6
 websockets==8.1
-whitenoise==5.0.1
+whitenoise==5.3.0
